k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insurance-be
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insurance-be
  template:
    metadata:
      labels:
        app: insurance-be
    spec:
      containers:
        - name: springboot-container
          image: rafifsulaiman/darkweb:REPLACE_ME_TAG
          ports:
            - containerPort: 8080
