k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: darkweb-1-service
  namespace: default
spec:
  selector:
    app: darkweb-1
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
